# AutoResearcher

./: .gitignore  AGENTS.md  README.md  environment.yml  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: PROGRESS.md  REPRODUCTION_GUIDE.md  TODO.md  usvps.yaml
docs/examples/: llm_releases_2026_03.md  nobel_prize_2025.md
eval/: EXPERIMENTS.md  article_labels.json  eval_rag.py  event_families.json  event_review.html  family_merge.html  label_articles.py  model_release_review.csv  reviewed_events.json
examples/: run_local.py
experiments/: experiment_config.example.yaml
rag/: DB_ANALYSIS.md  IMPLEMENTATION_PLAN.md  bm25_search.py  config.py  rag_search.py  requirements.txt  reranker.py  text_analyzer.py
rag/eval/: evaluate.py  evaluate_fast.py  subset.py
rag/eval/results/: analysis_results.md
rag/resources/: bm25_stopwords_zh.txt
rag/scripts/: build_index.py  clean_html.py  db.py
rag/tests/: test_bm25.py  test_rag.py  test_reranker.py  test_text_analyzer.py
scripts/: batch_runner.py
src/: cli.py  configuration.py  debug_trace.py  graph.py  lats_subgraph.py  model_factory.py  prompts.py  rag_subgraph.py  runner.py  state.py  tui.py  tui_advanced.py  utils.py
tests/: test_imports.py  test_lats_subgraph.py  test_phase3.py  test_phase4.py  test_smoke.py
